2_view/camagru.css
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
	font-family: Helvetica, sans-serif;
}

.header {
    width: 100%;
	padding: 10px 10px;
	height: auto;
	background-color: #f1f1f1;
	font-size: 14px;
}

footer {
    flex-shrink: 0;
    background-color: #396;
    color: white;
    text-align: center;
}

.main {
    /*margin-left: 200px;*/
    flex: 1 0 auto;
	padding: 10px 10px;
    width: auto;
    display: block;
}

/* Sidebars */

.sidenav {
    width: 190px;
    position: fixed;
    z-index: 1;
    top: 130px;
    left: 10px;
    background: #f8f8f8;
    overflow-x: hidden;
    padding: 10px 0;
}

.sidenav a {
    padding: 8px 8px 16px 16px;
    text-decoration: none;
    color: grey;
    font-size: 16px;
    display: block;
}

.sidenav a:hover {color: #396;}

.sidenav a.active {color: #396; background: #fdfdfd;}


@media all and (max-width: 600px) {
    .sidenav {
        display: none;
    }
}

.flex_container_first_last {
    display: flex;
    flex-direction: row; /* | row-reverse | column | column-reverse;*/
    justify-content: space-between; /* flex-start | flex-end | center | space-between | space-around | space-evenly;*/
}

.flex_container_column {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.menu {
    list-style: none;
    margin: 0;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    justify-content: flex-start;
}

@media all and (max-width: 600px) {
  .flex_container_first_last {
    flex-direction: column;
    justify-content: center;
  }
  .flex_container_column {
    flex-direction: column;
    justify-content: center;
  }
  .menu {
    justify-content: flex-start;
  }
}

/* Dropdown features */

.dropbtn {
    text-decoration: none;
    color: grey;
    padding: 5px;
    font-size: 16px;
    border: none;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    text-decoration: none;
    min-width: 100px;
    z-index: 1;
    font-size: 14px;
}

.dropdown-content a {
    float: left;
    color: black;
    padding: 10px 12px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {background-color: #fafafa; color: #396;}

.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {color: #396; /*font-weight: bold;*/}

/* Input fields and button */

.button {
    text-decoration: none;
	display: inline-block;
	font-size: 15px;
	font-family: Helvetica, sans-serif;
	color: #fff;
	background-color: #396;
	margin: 1%;
    min-width: 65px;
    width: auto;
    height: auto;
    border: 1px;
    border-radius: 2px;
    padding: 10px 10px;
    cursor: pointer;
}

#capture {
    width: 150px;
}

#continue {
    width: 150px;
    background-color: #396;
    margin: 10px;
}

#continue.disabled {
    background-color: #939393;
}

.choose_file_div {
    padding: 8px 2px;
    background: #396;
    position:relative;
    color: #fff;
    border: 2px solid #396;
    border-radius: 3px;
    text-align: center;
    cursor: pointer;
    width: 150px;
    font-size: 15px;

}

#choose_file {
    position: absolute;
    z-index: 1000;
    opacity: 0;
    cursor: pointer;
    right: 0;
    top: 0;
    height: 100%;
    /*font-size: 20px;*/
    width: 100%;
}

.input {
	display: inline-block;
    border: 1px solid #ccc;
    padding: 10px 8px;
    margin: 2px 0;
}


/* Color alert */

.error {
	color: red;
}

.success {
	color: green;
}



/* Gallery needs a lot of editing */

.gallery_container {
    margin: 0 0 10px;
    border: 1px solid #ccc;
    padding: 6px 6px;
    float: left;
    width: 315px;
    height: auto;
}

.nick {
    font-size: 16px;
    text-align: left;
    font-weight: bold;
}

.desc {
    font-size: 14px;
    padding: 5px;
    text-align: left;
}

.date {
    font-size: 12px;
    padding: 5px;
    text-align: left;
}

.responsive {
    padding: 0 6px;
    width: 25%;
}

@media only screen and (max-width: 700px) {
  .responsive {
    width: 100%;
    margin: 10px 6px;
  }
}

@media only screen and (max-width: 500px) {
  .responsive {
    width: 100%;
  }
}

/* Camera */

.camera {
    width: 420px;
    background-color: #ddd;
    border: 10px solid #ddd;
    margin: 0 auto;

}

#canvas {
    display: none;
}

video {
    -moz-transform: scale(-1, 1);
    -webkit-transform: scale(-1, 1);
    -o-transform: scale(-1, 1);
    transform: scale(-1, 1);
    filter: FlipH;
}


.flex_container_preview_row {
    display: flex;
    flex-direction: row; /* | row-reverse | column | column-reverse;*/
    justify-content: center; /* flex-start | flex-end | center | space-between | space-around | space-evenly;*/
}

.flex_container_preview_column {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

@media only screen and (max-width: 800px) {
    .flex_container_preview_row {
        flex-direction: column;
    }
}

.preview_container {
    /*position: relative;*/
    /*left: 300px;*/
    margin: 0 0 10px;
    border: 1px solid #ccc;
    padding: 6px 6px;
    float: left;
    height: auto;
}

#flex_sticker {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}

#flex_sticker > .selected {
    /*background-color: ;*/
    background-color: beige;
    animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
}

@keyframes shake {
    25%, 75% {
        transform: translate3d(0, 2px, 0);
    }

    50% {
        transform: translate3d(0, -2px, 0);
    }
}

.sticker {
    /*width: 50px;*/
    /*height: 50px;*/
    margin: 10px 0 10px;
    border: 1px solid #ccc;
    padding: 6px 6px;
}

.photo_container {
    position: relative;
}

#photo {
    /*position: relative;*/
}

#sticker_overlay {
    height: 100px;
    position: absolute;
    top: 20px;
    left: 20px;
}

#sticker_form {
    visibility: hidden;
}

textarea {
    font-size: 15px;
    outline: none;
}

.delete {
    font-size: 12px;
    color: red;
    align: right;
}

.like_info {
    font-size: 14px;
}

#comment {
    font-size: 13px;
    margin: 0 3px 3px;
}

.comment_form {
    float: left;
}

#comment_count {
    margin: 0 0 0 1px;
    font-size: 12px;
}

#btn_comment {
    background-color: #939393;
    font-size: 13px;
    height: 35px;

    margin: 1px;
    padding: 4px 0;
    float: left;
}

#btn_comment.active {
    background-color: #396;
}

.comment_display {
    font-size: 14px;
}

hr.divider {
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

input[type="checkbox"]{
    float: none;
    width: 30px; /*Desired width*/
    height: 30px; /*Desired height*/
    cursor: pointer;

}

.flex_share_col {
    display: flex;
    flex-direction: column; /* | row-reverse | column | column-reverse;*/
    justify-content: flex-end; /* flex-start | flex-end | center | space-between | space-around | space-evenly;*/
}

.flex_share_row {
    margin: 1px;
    display: flex;
    flex-direction: row; /* | row-reverse | column | column-reverse;*/
    justify-content: flex-end; /* flex-start | flex-end | center | space-between | space-around | space-evenly;*/
}

.pagination ul {
    text-decoration: none;

}

.pagination {
    padding: 0;
    margin: 30px;
    list-style-type: none;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-flow: row wrap;
    border: 1px solid #ccc;
    border-radius: 3px;
    width: 250px;
}

.paging_el {
    text-align: center;
    padding: 8px;
    margin: 0;
    flex: 1 1 auto;
}

.paging_el:hover {
    background-color: #f1f1f1;
}

li.disabled > a {
    color: #939393;
}

.paging_el + .paging_el {
    border-left: solid 1px #ccc;
}

ul > li > a {
    padding: 5px;
    text-decoration: none;
    color: #396;
}

#loader {
    /*animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;*/
    animation: 1s;
}

.article-list__pagination {
    background-color: #222;
    display: block;
    bottom: 0;
    left: 0;
    list-style-type: none;
    margin: 0;
    padding: .5em;
    position: fixed;
    right: 0;
    text-align: center;
    transform: translateY(0);
    transition: transform 1s;
    z-index: 2;
}

/*.article-list__pagination--inactive {*/
/*    transform: translateY(100%);*/
/*}*/

.article-list__pagination__item {
    display: inline-block;
    margin: 0 1em;
}

.article-list__pagination__item > a {
    color: #888;
    text-decoration: none;
}

.article-list__pagination__item > a:hover {
    color: #939393;
    text-decoration: none;
}

